aks/manifests/rr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rr
  template:
    metadata:
      labels:
        app: rr
    spec:
      containers:
      - name: rr
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rr
spec:
  selector:
    app: rr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rr
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "2"
    appgw.ingress.kubernetes.io/request-timeout: "60"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"  
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - rr.azure.rentrahisi.co.ke
    secretName: tls-cert
  rules:
  - host: rr.azure.rentrahisi.co.ke
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rr
            port:
              number: 80
